# env-updater

./: .python-version  README.md  pyproject.toml
src/: envupdater.py
